# gto

./: CMakeLists.txt
lib/Gto/: CMakeLists.txt  Parser.cpp  Reader.cpp  Writer.cpp
lib/Gto/test/: CMakeLists.txt
lib/GtoContainer/: CMakeLists.txt  Foundation.h  Reader.cpp
lib/GtoContainer/test/: CMakeLists.txt
plugins/python/: setup.py
